# modern_bision

./: .clang-format  .gitignore  AST.hpp  CMakeLists.txt  COMPILER_DESIGN.md  README.md  Scanner.hpp  ast.cpp  ast.hpp  ast_visitor.hpp  build.bat  build.sh  demo.txt  grammar.y  input.txt  lexer.l  main.cpp  test.txt
.github/workflows/: ci.yml
.qoder/repowiki/en/content/: Development Guide.md  Getting Started.md  Language Specification.md  Parser Implementation.md  Project Overview.md  Runtime System.md  Scanner and Lexer.md  Testing Framework.md
.qoder/repowiki/en/content/AST Framework/: AST Construction and Building Patterns.md  AST Framework.md  Memory Management and RAII.md  Node Hierarchy and Types.md  Visitor Pattern Implementation.md
.qoder/repowiki/en/content/Architecture Overview/: AST Framework.md  Architecture Overview.md  Compiler Phases.md  Integration Patterns.md  Visitor Pattern Implementation.md
.qoder/repowiki/en/content/Runtime System/: Interpreter Implementation.md  Runtime System.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
include/: Scanner.hpp  ast.hpp  ast_visitor.hpp  compiler.hpp  context.hpp  interpreter.hpp  pretty_printer.hpp  symtab.hpp  type_table.hpp  value.hpp
include/passes/: llvm_ir_pass.hpp  semantic_pass.hpp
src/: ast.cpp  interpreter.cpp  main.cpp  pretty_printer.cpp
src/passes/: llvm_ir_pass.cpp  semantic_pass.cpp
tests/: CMakeLists.txt  test_interpreter.cpp  test_parser.cpp
